// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> should match snapshot 1`] = `
<section
  className="menu landing-main"
>
  <h4
    className="text-center"
  >
    Test menu for today
  </h4>
  <div
    className="card menu-card table-scroll"
  >
    <Loading
      text="fetching meals..."
    >
      <Preloader
        active={true}
        color="blue"
        flashing={true}
        size="medium"
      />
    </Loading>
    <Paginate
      nextUrl=""
      onPageChange={[Function]}
      previousUrl=""
      style={
        Object {
          "marginTop": "0",
        }
      }
    />
  </div>
</section>
`;

exports[`<Menu /> should match snapshot 2`] = `
<section
  className="menu landing-main"
>
  <h4
    className="text-center"
  >
    Menu for Today Fri Sep 07 2018
  </h4>
  <div
    className="card menu-card table-scroll"
  >
    <MenuMeals
      meals={
        Array [
          Object {
            "id": 1,
            "name": "test meal",
            "price": 4000,
          },
          Object {
            "id": 2,
            "name": "test meal",
            "price": 4000,
          },
        ]
      }
    />
    <Paginate
      nextUrl=""
      onPageChange={[Function]}
      previousUrl=""
      style={
        Object {
          "marginTop": "0",
        }
      }
    />
  </div>
</section>
`;
